[package]
authors = ["TheAwiteb <awiteb@hotmail.com>"]
description = "Simple API to ping a telegram bot using superbot (mtproto)"
edition = "2021"
license = "AGPL-3.0-or-later"
name = "telepingbot"
readme = "README.md"
repository = "https://github.com/TheAwiteb/telepingbot"
rust-version = "1.68.2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
grammers-client = "= 0.4.0"
grammers-session = "= 0.4.0"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
promptly = "0.3.1"
salvo = {version = "0.58.3", features = ["logging", "affix"]}
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
sha256 = "1.4.0"
tokio = {version = "1.34.0", features = ["macros", "rt-multi-thread", "signal"]}
